Fix scroll for auth pages. Fix link jumping on about exe page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -219,6 +219,8 @@ a {
     padding: 1rem 2rem;
     font-size: 1.2rem;
     line-height: 1.8rem;
+    overflow-y: scroll;
+    height: calc(100vh - 100px);
 }
 
 .menu {
